# muvimaker

./: .coveragerc  .travis.yml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: continuous_integration.yml  deploy_release.yml
muvi_maker/: __init__.py  main.py
muvi_maker/core/: picture.py  project.py  sound.py  utils.py  video.py
muvi_maker/core/pictures/: __init__.py  add_bounce.py  background.py  base_bounce.py  base_form.py  base_picture.py  circle.py  circle_with_bounce.py  meta_circle.py  meta_picture.py  meta_polygon.py  meta_rectangle.py  meta_regular_polygon.py  picture_from_file.py  simple_picture.py  star.py  star_with_bounce.py
muvi_maker/editor/: editor.py  filemenu.py  info_frame.py  menubar.py  soundmenu.py
muvi_maker/editor/dialogues/: __init__.py  add_picture_dialogue.py  add_sound_dialogue.py  base_dialogue.py  open_project_dialogue.py  scratchdir_dialogue.py
muvi_maker/editor/frames/: __init__.py  analyzer_frame.py  info_frame.py  logging_frame.py  parameters_frame.py
muvi_maker/editor/menubar/: menubar.py
muvi_maker/example_data/: __init__.py
muvi_maker/images/: __init__.py
muvimaker/: __init__.py  main.py
muvimaker/core/: face_recogniser.py  project.py  sound.py  utils.py  video.py
muvimaker/core/pictures/: __init__.py  background.py  base_bounce.py  (+16 more)
muvimaker/editor/: __init__.py  editor.py
muvimaker/example_data/: __init__.py
test/: test_1_project_handler.py  test_2_pre_computed_picture.py  test_editor.py  test_pre_computed_picture.py  test_project_handler.py
(+20 files in other folders)
