[metadata]
name = muvi-maker-by-jannisnecker
version = 0.0.1
author = Jannis Necker
author_email = jannis.necker@gmail.com
description = A small package to generate moving pictures from sound
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JannisNe/muvi_maker
project_urls =
    Bug Tracker = https://github.com/JannisNe/muvi_maker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6